# SPT

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  Makefile.bak  README.md  README.rst  autorelease.sh  client.py  environment.yml  for_maintainers.md  fragment.py  index.html  maintenance.html  numeric.py  plan_for_implementation_of_path_data_model.txt  pyproject.toml  pyproject.toml.unversioned  refactor.txt  remove_pycache_and_egg_info.sh  requirements.apiserver.txt  requirements.ondemand.txt  requirements.txt  server.py  setup.py  testing_script_mismatch_number_cells.py  todos.june1  todos.txt
analysis_replication/: README.md  accessors.py  anatomical_labels_annotations.tsv  api_host.txt  bone_marrow.py  breast_imc.py  create_overview_diagram.py  environment.yml  figure_components.py  graph_plugin_plots.py  luad_imc.py  melanoma_ici.py  melanoma_il2.py  moldexample_neighp.txt  outcome_stratum_labels_annotations.tsv  overview_components.html  overview_diagram.template.css  overview_diagram.template.html  plot_bm.py  results.txt  retrieve_example_plot.py  run_all.py  survey.py  urothelial.txt.tmp  urothelial_ici.py
apiserver/: Dockerfile  README.md  index.html  task_definition_pathstats_api_app.json.jinja
build_scripts/: Dockerfile.base  check_for_credentials.py  create_requirements.py  create_requirements.sh  development.Dockerfile  import_test_dataset1.sh  import_test_dataset2.sh  status_messages_only_shell.sh  test_verbose_command_wrapper.sh  verbose_command_wrapper.sh
building/: Dockerfile.base  Dockerfile.template  build_singularity_container.sh  build_singularity_mp.sh  check_commit_state.sh  check_containers_ready.sh  check_for_credentials.py  create_requirements.py  create_requirements.sh  development.Dockerfile  expected_table_counts.txt  import_test_dataset1.sh  import_test_dataset1and2.sh  import_test_dataset2.sh  package-introspection.Dockerfile  poll_container_readiness.sh  sed_wrapper.sh  singularity_container.def  start_docker_daemon.sh  status_messages_only_shell.sh  task_definition_pathstats_api_app.json.jinja  test_HALO_exported_data_import.sh  test_verbose_command_wrapper.sh  verbose_command_wrapper.sh
countsserver/: Dockerfile  benchmark_partial_counts.py  index.json  log_formats.py  spt-counts-server
data_curation/: README.md  import_dataset.sh  show_progress.sh
deployment/: nextflow.config.lsf  spt_pipeline.nf
docs/: README.md.old  cells.md  cggnn.md  cggnn_environment.yml  cggnn_environment_no_cuda.yml  conf.py  graphs.md  index.rst  input_data_requirements.tex  load_testing.md  maintenance.md  readme.rst  spatialprofilingtoolbox.applications.cell_cartoons.application.rst  spatialprofilingtoolbox.applications.cell_cartoons.rst  spatialprofilingtoolbox.applications.rst  spatialprofilingtoolbox.environment.cell_metadata.rst  spatialprofilingtoolbox.environment.computational_design.rst  spatialprofilingtoolbox.environment.database_context_utility.rst  spatialprofilingtoolbox.environment.log_formats.rst  spatialprofilingtoolbox.environment.rst  spatialprofilingtoolbox.environment.settings_wrappers.rst  spatialprofilingtoolbox.scripts.rst  spatialprofilingtoolbox.scripts.spt-analyze-results.rst  spatialprofilingtoolbox.scripts.spt-density-analysis.rst  spatialprofilingtoolbox.scripts.spt-frequency-analysis.rst  spatialprofilingtoolbox.scripts.spt-pipeline.rst  spatialprofilingtoolbox.workflows.density.analyzer.rst  spatialprofilingtoolbox.workflows.density.computational_design.rst  spatialprofilingtoolbox.workflows.density.integrator.rst  spatialprofilingtoolbox.workflows.density.job_generator.rst  spatialprofilingtoolbox.workflows.density.rst  spatialprofilingtoolbox.workflows.diffusion.computational_design.rst  spatialprofilingtoolbox.workflows.frequency.analyzer.rst  spatialprofilingtoolbox.workflows.frequency.computational_design.rst  spatialprofilingtoolbox.workflows.frequency.core.rst  spatialprofilingtoolbox.workflows.frequency.data_logging.rst  spatialprofilingtoolbox.workflows.frequency.integrator.rst  spatialprofilingtoolbox.workflows.frequency.job_generator.rst  spatialprofilingtoolbox.workflows.frequency.rst  spatialprofilingtoolbox.workflows.front_proximity.integrator.rst  (+3 more)
experimental_fastapi/: README.md  requirements.txt
frontend/: .eslintrc.cjs  .gitignore  README.md  compose.yaml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
hooks/: post-commit
notes/: modularization_plan.md  pull_request_description.md  todos.june1
plugin/: README.md
queries/: drop_tables.sql  query_average_expression_feature.sql  query_avg_per_outcome_channel.sql  query_cell_types.sql  query_one_channel_vs_outcome.sql
schemas/: FileAssetManifestSpecification_v0.5.docx  file_manifest_specification_v0.5.md  input_data_requirements.tex
smprofiler/: LICENSE.md  __init__.py  util.py
spatial_analysis_toolbox/: README.md  setup.py
spatial_profiling_toolbox/: README.md  requirements.txt  setup.py
spatialprofilingtoolbox/: LICENSE.md  __init__.py  database_connection.py  fields.tsv  log_formats.py  log_table.html.jinja  main.nf  module_load_error.py  nextflow.config.jinja  nextflow.config.local  nextflow.config.lsf  pathology_schema.sql  requirements.txt  spt_pipeline.nf  util.py  version.txt
test/: plot_float_distributions.py
tests/: cleaning.sh  nf_test.nf  sample_config_file_diffusion.txt  sample_config_file_frequency.txt  sample_config_file_front_proximity.txt  sample_config_file_proximity.txt  sample_config_file_proximity_balanced.txt  spt_pipeline.nf  test_aggregate_cell_metadata.sh  test_analyze_results_diffusion.sh  test_analyze_results_proximity.sh  test_density_pipeline.sh  test_diffusion_pipeline.sh  test_frequency_pipeline.sh  test_front_proximity_pipeline.sh  test_halo_areas_provider.py  test_halo_cell_metadata.py  test_proximity_pipeline.sh  test_proximity_pipeline_balanced.sh  test_run_pipeline.sh  tests_integration.sh
view_site/: index.html  index.html.jinja  parameter_filling.js  phenotype_fractions.js  render.py  retrievable_stats_components.js  style.css  (+3 more)
(+1769 files in other folders)
