[build-system]
requires = [
    "setuptools>=63",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "spatialprofilingtoolbox"
version = "1.0.14"
authors = [
    { name = "James Mathews", email = "mathewj2@mskcc.org" }
]
description = "Toolbox for spatial analysis of single cell data."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.13"
dependencies = [
    "attrs",
    "boto3",
    "botocore",
    "jinja2",
    "numba>=0.44.0",
    "psycopg",
    "pyshp",
    "pytz",
    "requests",
    "termplotlib",
]

[project.urls]
documentation = "https://github.com/nadeemlab/SPT"
repository = "https://github.com/nadeemlab/SPT"

[project.optional-dependencies]
all = [
    "adiscstudies",
    "alembic",
    "attrs",
    "bokeh",
    "boto3",
    "botocore",
    "Brotli",
    "cryptography",
    "dask[dataframe]",
    "dask-expr",
    "fastapi",
    "h5py",
    "jinja2",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "psycopg",
    "pydantic",
    "PyJWT",
    "pyshp",
    "pytz",
    "requests",
    "secure",
    "scipy",
    "scikit-learn",
    "sqlmodel",
    "squidpy", "zarr<3",
    "tables",
    "tabulate",
    "termplotlib",
    "tqdm",
    "umap-learn",
    "uvicorn",
    "zstandard",
]
apiserver = [
    "alembic",
    "attrs",
    "cryptography",
    "fastapi",
    "matplotlib",
    "psycopg",
    "pydantic",
    "PyJWT",
    "pytz",
    "requests",
    "secure",
    "sqlmodel",
    "uvicorn",
    "zstandard",
    "scikit-learn", "squidpy", "zarr<3", "dask[dataframe]", "dask-expr",
]
graphs = [
    "bokeh",
    "h5py",
    "matplotlib",
    "networkx",
    "requests",
    "tables",
]
ondemand = [
    "attrs",
    "Brotli",
    "dask[dataframe]",
    "dask-expr",
    "numpy",
    "pandas",
    "psycopg",
    "pydantic",
    "scipy",
    "scikit-learn",
    "squidpy", "zarr<3",
    "tabulate",
    "tqdm",
    "umap-learn",
]
dev = [
    "autopep8",
    "mypy",
    "pylint",
    "pytest",
]

[project.scripts]
spt = "spatialprofilingtoolbox.entry_point.cli:main_program"
spt-enable-completion = "spatialprofilingtoolbox.entry_point.spt_enable_completion:main_program"

[tool.setuptools]
packages = [
    "spatialprofilingtoolbox",
    "spatialprofilingtoolbox.standalone_utilities",
    "spatialprofilingtoolbox.entry_point",
    "spatialprofilingtoolbox.apiserver",
    "spatialprofilingtoolbox.apiserver.app",
    "spatialprofilingtoolbox.apiserver.scripts",
    "spatialprofilingtoolbox.graphs",
    "spatialprofilingtoolbox.graphs.scripts",
    "spatialprofilingtoolbox.ondemand",
    "spatialprofilingtoolbox.ondemand.providers",
    "spatialprofilingtoolbox.ondemand.scripts",
    "spatialprofilingtoolbox.db",
    "spatialprofilingtoolbox.db.accessors",
    "spatialprofilingtoolbox.db.exchange_data_formats",
    "spatialprofilingtoolbox.db.scripts",
    "spatialprofilingtoolbox.db.data_model",
    "spatialprofilingtoolbox.workflow",
    "spatialprofilingtoolbox.workflow.scripts",
    "spatialprofilingtoolbox.workflow.component_interfaces",
    "spatialprofilingtoolbox.workflow.graph_generation",
    "spatialprofilingtoolbox.workflow.graph_plugin",
    "spatialprofilingtoolbox.workflow.tabular_import",
    "spatialprofilingtoolbox.workflow.tabular_import.parsing",
    "spatialprofilingtoolbox.workflow.common",
    "spatialprofilingtoolbox.workflow.common.logging",
    "spatialprofilingtoolbox.workflow.assets",
]

[tool.setuptools.package-data]
"spatialprofilingtoolbox" = ["py.typed"]
"spatialprofilingtoolbox.entry_point" = ["spt-completion.sh.jinja"]
"spatialprofilingtoolbox.workflow.scripts" = [
    "aggregate_core_results.py",
    "core_job.py",
    "extract_compartments.py",
    "generate_run_information.py",
    "initialize.py",
    "merge_performance_reports.py",
    "merge_sqlite_dbs.py",
    "report_run_configuration.py",
    "configure.py",
    "report_on_logs.py",
    "tail_logs.py",
]
"spatialprofilingtoolbox.workflow.assets" = [
    ".spt_db.config.template",
    ".workflow.config.template",
    "log_table.tex.jinja",
    "log_table.html.jinja",
    "main_visitor.nf",
    "nextflow.config.jinja",
]
"spatialprofilingtoolbox.workflow.graph_generation" = [
    "graph_generation.nf",
    "main.nf",
]
"spatialprofilingtoolbox.workflow.graph_plugin" = ["main.nf"]
"spatialprofilingtoolbox.workflow.tabular_import" = ["main.nf"]
"spatialprofilingtoolbox.apiserver.scripts" = [
    "dump_schema.py",
]
"spatialprofilingtoolbox.ondemand.scripts" = [
    "read_expression_dump_file.py",
    "assess_recreate_cache.py",
    "start.py",
]
"spatialprofilingtoolbox.db.scripts" = [
    "create_schema.py",
    "guess_channels_from_object_files.py",
    "status.py",
    "retrieve_feature_matrices.py",
    "drop.py",
    "drop_ondemand_computations.py",
    "delete_feature.py",
    "upload_sync_small.py",
    "collection.py",
    "interactive_uploader.py",
    "load_testing.py",
]
"spatialprofilingtoolbox.db.data_model" = [
    "metaschema.sql",
    "drop_metaschema.sql",
    "create_roles.sql",
    "create_views.sql",
    "drop_views.sql",
    "fields.tsv",
    "grant_on_tables.sql",
    "performance_tweaks.sql",
    "refresh_views.sql",
    "feature_descriptions.tsv",
]
"spatialprofilingtoolbox.graphs.scripts" = [
    "create_specimen_graphs.py",
    "explore_classes.py",
    "extract.py",
    "finalize_graphs.py",
    "generate_graphs.py",
    "plot_importance_fractions.py",
    "plot_interactives.py",
    "prepare_graph_creation.py",
    "upload_importances.py",
]
